# alfred-workflow-github

./: .gitignore  Cargo.toml  Makefile  TODO.md
src/: actions.rs  alfred.rs  alfred_models.rs  args.rs  config.rs  github_util.rs  hub_compat.rs  main.rs
src/actions/: config.rs  copy.rs  fetch.rs  install.rs  mod.rs  pulls.rs  refresh.rs  repos.rs  search_issues.rs
src/alfred/: models.rs
workflow/: info.plist
