[package]
name = "alfred-workflow-github"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
dirs = "5.0.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
eyre = "0.6.8"
futures = "0.3.28"
itertools = "0.11.0"
keyring = "2.0.5"
lazy_static = "1.4.0"
log = { version = "0.4.20", features = ["serde"] }
octocrab = "0.30.1"
regex = "1.9.5"
reqwest = { version = "0.11.20", default-features = false, features = ["tokio-rustls", "rustls", "hyper-rustls", "rustls-tls", "serde_json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["indexmap", "preserve_order"] }
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["full"] }
typed-builder = "0.16.0"
