[package]
name = "alfred-workflow-github"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
dirs = "5.0.1"
edit = "0.1.5"
env_logger = "0.10.0"
eyre = "0.6.8"
futures = "0.3.28"
indexmap = "2.0.2"
itertools = "0.11.0"
keyring = "2.0.5"
log = { version = "0.4.20", features = ["serde"] }
octocrab = "0.30.1"
once_cell = "1.18.0"
open = { version = "5.0.1" }
regex = "1.9.5"
reqwest = { version = "0.11.20", default-features = false, features = ["tokio-rustls", "rustls", "hyper-rustls", "rustls-tls", "serde_json"] }
rust-embed = { version = "8.2.0", optional = true }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["indexmap", "preserve_order"] }
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["full"] }
toml = { version = "0.8.2", features = ["indexmap", "preserve_order"] }
typed-builder = "0.16.0"
wildmatch = "2.3.0"
zip = "0.6.6"

# the install feature adds open and rust-embed
[features]
install = ["dep:rust-embed"]
default = ["install"]
